--- a/.github/workflows/testing.workflow.yml
+++ b/.github/workflows/testing.workflow.yml
@@ -1,1 +1,21 @@
-### TODO: Add workflow to run tests on push and pull requests to main
+name: Production test
+on: 
+  push:
+    branches: 
+      - main
+
+  pull_request:
+      branches: 
+        - main
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+      - run: npm install
+      - run: npm run test
