--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,28 +1,13 @@
-#TODO: setup docker file
-
-
 services:
-  db:
-    image: mongo:latest
-    container_name: mongo-db
-    ports:
-      - "27017:27017"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=password
-    volumes:
-      - ./mongo-data:/data/db
   app:
-    image: node:18
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: backend
-    working_dir: /app
+    ports:
+      - "5000:5000"
     volumes:
       - .:/app
-    depends_on:
-      - db
-    command: "npm start"
-    ports:
-      - "8082:8082"
     environment:
-      - MONGODB_URI=mongodb://admin:password@db:27017/core-academy?authSource=admin
-      
+      - DB_PATH=./database.sqlite
+    command: "npm start"
